--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,6 +37,10 @@ textarea:focus,
 button:focus {
   outline: none; }
 
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:hover {
+  background-color: none !important; }
+
 nav.navbar {
   font-family: 'gothamBook';
   border: 0;
@@ -694,7 +698,9 @@ footer {
     .signalBackground div.whatIsSignal .signalWrapper {
       width: 80em; }
   footer div.row a {
-    margin-left: 7em; } }
+    margin-left: 7em; }
+  footer div.row .firstFooterCol a:nth-child(3) {
+    width: 16em; } }
 
 @media only screen and (min-width: 1600px) {
   section.media div.newsRoom div {
